# course

02/01/: 0.cpp  1.1.cpp  2.1.cpp  2.cpp  CMakeLists.txt
02/02/: 0.cpp  1.cpp
08/00_hello/02/: main.cu
08/00_hello/03/: main.cu
08/00_hello/04/: CMakeLists.txt  main_test.cu
08/00_hello/05/: CMakeLists.txt  test.cu
08/00_hello/06/: main.cu
08/00_hello/07/: main.cu
08/00_hello/08/: CMakeLists.txt  main.cu
08/00_hello/09/: main.cu
08/00_hello/10/: main.cu
08/00_hello/11/: CMakeLists.txt
08/01_thread/07/: main.cu
08/01_thread/08/: main.cu
08/01_thread/09/: CMakeLists.txt
08/01_thread/10/: main.cu
08/02_memory/01/: main.cu
08/02_memory/02/: main.cu
08/02_memory/03/: main.cu
08/02_memory/04/: main.cu
08/02_memory/05/: main.cu
